--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,10 +18,12 @@
         <h1 class="login__title">LOGIN</h1>
         <img class="login__img" src="/assets/images/logo R.jpg" alt="">
         <form class="login__form" id="loginForm">
+
             <div class="login__input-group">
                 <label for="email">Email</label>
-                <input type ="email" id="email" name="email" value="seba@gmail.com" requerid minlength="">
+                <input type ="email" id="email" name="email" requerid placeholder="example@email.com" class="section-register__form-input" >
             </div>
+            
             <div class="login__input-group"> <br>
                 <label for="password1">Contraseña</label>
                 <input type="password" id="password" name="password" requerid>
