--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -83,8 +83,8 @@
             <button class = "btn" onclick="btnComprar()">Comprar</button>
           </div> -->
         <!-- </div> -->
-      <!-- </div> --> -->
-    <!-- </div> --> -->
+      <!-- </div> -->
+    <!-- </div> --> 
 </main>
     
 
