--- a/scss/pages/_order.scss
+++ b/scss/pages/_order.scss
@@ -5,7 +5,7 @@
 }
 
 .order-table {
-    width: 90%;
+    width: 100%;
    // border-collapse: collapse;
 }
 
@@ -21,10 +21,10 @@
 
 .order-table tr td:not(:first-child) {
     padding: 0.5rem;
-    
+    background-color: black;
 }
 .order-table tbody tr:nth-child(odd) {
-    background-color: rgb(236, 250, 255);
+    background-color: black;
 }
 .order-table tr th {
     padding: 0.5rem;
@@ -71,14 +71,15 @@
         margin-top: 65px;
         text-align: center;
         border-bottom: 1px solid black;
-        background-color: rgb(228, 228, 228);
+        background-color:black;
+        color: white;
     }
 
     &__img {
-        width: 70px;
+        width: 100px;
         object-fit: cover;
-        height: 70px;
-        border-radius: 50%;
+        height: 90px;
+        // border-radius: 50%;
         display: block;
         margin: 0 auto;
     }
