--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
                 <i class="fa-solid fa-bars"></i>
             </span>
         </button>
-        <a href="/index.html" class="navbar__nav-link">
+        <a href="/index" class="navbar__nav-link">
             <img class="navbar__logo" src="/assets/images/logo R.jpg" alt="Logo del ecommerce">
         </a>
         <div class="user-navbar">
