--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,16 +23,11 @@
                 <form class="form-register" id="registerForm">
                     <!-- ingresos de datos -->
                     <div>
-                        <label for="name">Nombre</label><br>
-                        <input type="text" name="name"  id="Name" required minlength="4" maxlength="40" size="50" autofocus autocomplete="on">
+                        <label for="fullName">Nombre Completo</label><br>
+                        <input type="text" name="fullName"  id="fullName" placeholder="Escriba su nombre" required minlength="4" maxlength="40" size="50" autofocus autocomplete="on">
                     </div>
                     <div>
-                        <label for="apellido">Apellido</label><br>
-                        <input type="text" name="apellido"  id="apellido"  minlength="4" maxlength="40" size="50" autofocus autocomplete="on" required>
-                    </div>
-                
-                    <div>
-                        <label for="emailInput">E-mail</label> <br>
+                        <label for="email">E-mail</label> <br>
                         <input type="email" name="email" id="email"  placeholder="example@email.com" minlength="8" maxlength="45" required>
                     </div>
                     <div>
