Se termina el crud de productos

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -57,7 +57,7 @@
 
       <%- include('partials/whatsapp') %>
       <%- include('partials/footer') %>
-      
+      <script src="/js/route.js"></script>
       <script src="/js/header.js"></script>  
 
 </body>
