--- a/views/about.ejs
+++ b/views/about.ejs
@@ -31,6 +31,8 @@
       <%- include('partials/whatsapp') %>
       <%- include('partials/footer') %> 	 
 
+
+      <script src="/js/route.js"></script>
       <script src="/js/header.js"></script>  
 
 </body>
