--- a/views/adminProducts.ejs
+++ b/views/adminProducts.ejs
@@ -26,12 +26,6 @@
         required minlength="3" maxlength="50" autofocus >
     </div>
     <div class="admin-product-form__items">
-        <label for="category">Categoria</label><br>
-        <select name="category" id="category"  class="admin-product-form__input" required>
-                    
-        </select>
-    </div>
-    <div class="admin-product-form__items">
         <label for="description" >Descripción</label><br>
         <textarea name="description" class="admin-product-form__input"
         id="description" rows="5" required> </textarea>
@@ -93,6 +87,7 @@
 
    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
+    <script src="/js/route.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/alert.js"></script>
     <script src="/js/adminProducts.js"></script>
