--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,8 +81,9 @@
     <%- include('partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
-    <script src="/js/alert.js"></script>
+    <script src="/js/route.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/alert.js"></script>
     <script src="/js/header.js"></script>
 
 </body>
