--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,9 @@
     <%- include('partials/footer') %>
     
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="/js/alert.js"></script>
+
+    <script src="/js/route.js"></script>
+    <script src="/js/alert.js"></script>
 <script src="/js/header.js"></script>
 <script src="/js/login.js"></script>
 
