--- a/views/order.ejs
+++ b/views/order.ejs
@@ -45,6 +45,7 @@
     <%- include('partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
+    <script src="/js/route.js"></script>
     <script src="/js/alert.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/orders.js"></script>
