--- a/views/register.ejs
+++ b/views/register.ejs
@@ -330,6 +330,7 @@
             <%- include('partials/footer') %>
             
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
+    <script src="/js/route.js"></script>
     <script src="/js/alert.js"></script>
     <script src="/js/header.js"></script>
     <script src="/js/register.js"></script>
