Se corrige add products

--- a/views/adminProducts.ejs
+++ b/views/adminProducts.ejs
@@ -37,7 +37,7 @@
     <div class="admin-product-form__items" id="admin-product-input-img">
         <label for="image">URL de Imagen</label><br>
                 <div class="input-box">
-                <input type="file" accept="image/*" name="image" >
+                <input type="file" accept="image/*" name="file" >
             </div>
     </div>
     
